feat: add first reviews endpoints and controllers
This two endpoints are the only ones related to reviews that start with /sneakers
