# docs/openapi.yaml
@@ -1,11 +1,11 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: Snapi (Sneakers API)
   version: 1.0.0
   description: API for managing sneakers, reviews, users, providers and stores
 servers:
-  - url: http://localhost:8080/api
-    description: V1
+  - url: http://localhost:8080/api/
+    description: Production server
 
 tags:
   - name: sneakers
@@ -216,7 +216,17 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Review'
+                $ref: '#/components/schemas/ReviewsResponse'
+        '400':
+          description: Invalid input data
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/Error' }
+        '409':
+          description: User has already reviewed this sneaker
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/Error' }
         '404':
           description: Sneaker not found
           content:
@@ -792,15 +802,21 @@ components:
         _id:
           type: string
           readOnly: true
+        sneakerId:
+          type: string
+          readOnly: true # The saved sneakerId is the one in the param
+        userId:
+          type: string
         rating:
           type: integer
           minimum: 1
           maximum: 5
         comment:
           type: string
-        userId:
+        date:
           type: string
-      required: [rating]
+          format: date-time
+      required: [sneakerId, rating, userId]
 
     UserInput:
       type: object
@@ -854,6 +870,19 @@ components:
           type: string
           enum: [success]
       required: [items, message, status]
+
+    ReviewsResponse:
+      type: object
+      properties:
+        items:
+            $ref: '#/components/schemas/Review'
+        message:
+          type: string
+        status:
+          type: string
+          enum: [success]
+      required: [items, message, status]
+
 
     Provider:
       type: object
